syntax = "proto3";

package board;

service UserAPI {
    rpc GetSignUp (SignupRequest) returns (IsSuccess);
    rpc GetLogin (LoginRequest) returns (LoginResponse);
    rpc GetUserData (JwtProto) returns (UserResponse);
    rpc GetUserById (GetByUserIdRequest) returns (UserResponse);
    rpc ChangeUserData (SetUser) returns (IsSuccess);
    rpc DeleteUser (JwtProto) returns (IsSuccess);
}

message IsSuccess {
    bool login = 1;
}

message GetByUserIdRequest {
    uint64 id = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    User user = 1;
    string access_token = 2;
}

message SignupRequest {
    string username = 1;
    string password = 2;
    string phone = 3;
}

message UserResponse {
    User user = 1;
}

message SetUser {
    User user = 1;
    string token = 2;
}

message JwtProto {
    string token = 1;
}

message User {
    uint64 id = 1;
    string name = 2;
    string username = 3;
    string password = 4;
    string email = 5;
    string phone = 6;
    string address = 7;
    bytes avatar = 8;
}